Set ImeListView's scrollable range when updating

For material design, we need to set turns the scroll view (listing all current IMEs) into a bounded scroll view, with a fixed height. When switching IME, this needs to set again and then call Layout() & SchedulePaint().
Since the range should not change during switching IMEs, we pass the range in the constructor of ImeListView instead of ImeListView::Update() every time.

BUG=667650
TEST=Verified on local build.

Review-Url: https://codereview.chromium.org/2541743004
Cr-Commit-Position: refs/heads/master@{#437168}

Former-commit-id: 29b403dc3d47bb52477c4bf5324b46557d38cd38